burger menu and some responsive works complated

--- a/bonapart-frontend/index.html
+++ b/bonapart-frontend/index.html
@@ -34,6 +34,21 @@
                     </ul>
                 </nav>
             </header>
+
+            <div class="burger-open d-none relative">
+                <div class="burger-close">+</div>
+                <div class="container">
+                    <div class="search-bar-banner ">
+                        <input type="text" name="searchBar" id="searchBar" placeholder="OEM No, Ürün Adı veya Stok kodu yazınız…">
+                        <a href="#"><img src="./frontend/icons/search-logo-r.png" alt=""></a>
+                    </div>
+                    <div class="search-mean">
+                        <p>Yazımı düzeltilmiş şu sorgu için sonuçları görüyorsunuz: <span id="search-answer" >ENJEKTOR GOVDESI</span></p>
+                        <p>Yine de şu sorguyu ara: <span id="your-search">ENJEKTOR GODESI</span></p>
+                    </div>
+                </div>
+            </div>
+
             <section class="banner-slider text-center "> 
                 <div class="banner-s-product-class-section w-100">
                     <div class="product-class">
@@ -384,7 +399,7 @@ ALL RIGHTS RESERVED</p>
                 </span>
                 <div class="projx-logos-card">
                     <figure class="front">
-                        <div><img src="/frontend/images/projx.png" alt="PROJX"></div>
+                        <div><img src="./frontend/images/projx.png" alt="PROJX"></div>
                     </figure>
                     <figure class="back">
                         <div>www.projx.com.tr</div>
