--- a/bonapart-frontend/see-all.html
+++ b/bonapart-frontend/see-all.html
@@ -57,7 +57,7 @@
                         <span>Arama</span>  » <span>Süspansiyon</span>  » <span>Makas</span>
                     </div>
                     <div class="breadcrumb-right">
-                        Tam <span>463</span> sonuç listelendi.
+                        Tam <span class="mx-2">463</span> sonuç listelendi.
                     </div>
                 </div>
             </section>
@@ -197,7 +197,7 @@
                                             src="./frontend/icons/heart-fill.png" alt=""></div>
                                     <div class="inspect"><a href="#">İNCELE</a></div>
                                     <div class="add-card">
-                                        <div class="how-much"> <span>-</span> <span>1</span> <span>+</span> </div>
+                                        <div class="how-much"> <span id="minus" class="minus" >-</span> <span id="result">1</span> <span id="plus" class="plus" >+</span> </div>
                                         <div class="add-to-basket"><a href="#">SEPETE EKLE</a></div>
                                     </div>
                                 </div>
@@ -223,7 +223,7 @@
                                             src="./frontend/icons/heart-fill.png" alt=""></div>
                                     <div class="inspect"><a href="#">İNCELE</a></div>
                                     <div class="add-card">
-                                        <div class="how-much"> <span>-</span> <span>1</span> <span>+</span> </div>
+                                        <div class="how-much"> <span id="minus" class="minus" >-</span> <span id="result">1</span> <span id="plus" class="plus" >+</span> </div>
                                         <div class="add-to-basket"><a href="#">SEPETE EKLE</a></div>
                                     </div>
                                 </div>
@@ -249,7 +249,7 @@
                                             src="./frontend/icons/heart-fill.png" alt=""></div>
                                     <div class="inspect"><a href="#">İNCELE</a></div>
                                     <div class="add-card">
-                                        <div class="how-much"> <span>-</span> <span>1</span> <span>+</span> </div>
+                                        <div class="how-much"> <span id="minus" class="minus" >-</span> <span id="result">1</span> <span id="plus" class="plus" >+</span> </div>
                                         <div class="add-to-basket"><a href="#">SEPETE EKLE</a></div>
                                     </div>
                                 </div>
@@ -275,7 +275,7 @@
                                             src="./frontend/icons/heart-fill.png" alt=""></div>
                                     <div class="inspect"><a href="#">İNCELE</a></div>
                                     <div class="add-card">
-                                        <div class="how-much"> <span>-</span> <span>1</span> <span>+</span> </div>
+                                        <div class="how-much"> <span id="minus" class="minus" >-</span> <span id="result">1</span> <span id="plus" class="plus" >+</span> </div>
                                         <div class="add-to-basket"><a href="#">SEPETE EKLE</a></div>
                                     </div>
                                 </div>
@@ -301,7 +301,7 @@
                                             src="./frontend/icons/heart-fill.png" alt=""></div>
                                     <div class="inspect"><a href="#">İNCELE</a></div>
                                     <div class="add-card">
-                                        <div class="how-much"> <span>-</span> <span>1</span> <span>+</span> </div>
+                                        <div class="how-much"> <span id="minus" class="minus" >-</span> <span id="result">1</span> <span id="plus" class="plus" >+</span> </div>
                                         <div class="add-to-basket"><a href="#">SEPETE EKLE</a></div>
                                     </div>
                                 </div>
@@ -327,7 +327,7 @@
                                             src="./frontend/icons/heart-fill.png" alt=""></div>
                                     <div class="inspect"><a href="#">İNCELE</a></div>
                                     <div class="add-card">
-                                        <div class="how-much"> <span>-</span> <span>1</span> <span>+</span> </div>
+                                        <div class="how-much"> <span id="minus" class="minus" >-</span> <span id="result">1</span> <span id="plus" class="plus" >+</span> </div>
                                         <div class="add-to-basket"><a href="#">SEPETE EKLE</a></div>
                                     </div>
                                 </div>
@@ -353,7 +353,7 @@
                                             src="./frontend/icons/heart-fill.png" alt=""></div>
                                     <div class="inspect"><a href="#">İNCELE</a></div>
                                     <div class="add-card">
-                                        <div class="how-much"> <span>-</span> <span>1</span> <span>+</span> </div>
+                                        <div class="how-much"> <span id="minus" class="minus" >-</span> <span id="result">1</span> <span id="plus" class="plus" >+</span> </div>
                                         <div class="add-to-basket"><a href="#">SEPETE EKLE</a></div>
                                     </div>
                                 </div>
@@ -379,7 +379,7 @@
                                             src="./frontend/icons/heart-fill.png" alt=""></div>
                                     <div class="inspect"><a href="#">İNCELE</a></div>
                                     <div class="add-card">
-                                        <div class="how-much"> <span>-</span> <span>1</span> <span>+</span> </div>
+                                        <div class="how-much"> <span id="minus" class="minus" >-</span> <span id="result">1</span> <span id="plus" class="plus" >+</span> </div>
                                         <div class="add-to-basket"><a href="#">SEPETE EKLE</a></div>
                                     </div>
                                 </div>
@@ -405,7 +405,7 @@
                                             src="./frontend/icons/heart-fill.png" alt=""></div>
                                     <div class="inspect"><a href="#">İNCELE</a></div>
                                     <div class="add-card">
-                                        <div class="how-much"> <span>-</span> <span>1</span> <span>+</span> </div>
+                                        <div class="how-much"> <span id="minus" class="minus" >-</span> <span id="result">1</span> <span id="plus" class="plus" >+</span> </div>
                                         <div class="add-to-basket"><a href="#">SEPETE EKLE</a></div>
                                     </div>
                                 </div>
@@ -431,13 +431,14 @@
                                             src="./frontend/icons/heart-fill.png" alt=""></div>
                                     <div class="inspect"><a href="#">İNCELE</a></div>
                                     <div class="add-card">
-                                        <div class="how-much"> <span>-</span> <span>1</span> <span>+</span> </div>
+                                        <div class="how-much"> <span id="minus" class="minus" >-</span> <span id="result">1</span> <span id="plus" class="plus" >+</span> </div>
                                         <div class="add-to-basket"><a href="#">SEPETE EKLE</a></div>
                                     </div>
                                 </div>
                             </div>
                             <div class="brand"> <img src="./frontend/images/brands/bosch.png" alt=""> </div>
                         </div>
+                        
                         <div class="bordered"></div>
                         <div class="page-next text-center">
                             <div class="page-box left"><i class="fa-solid fa-angles-left"></i></div>
