animations will be add

--- a/bonapart-frontend/see-all.html
+++ b/bonapart-frontend/see-all.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="./frontend/css/animate-css.css">
     <link rel="stylesheet" href="./frontend/slick/slick-theme.css">
     <link rel="stylesheet" href="./frontend/slick/slick.css">
-
+    <link rel="stylesheet" href="./frontend/css/animation-plus.css">
 
 </head>
 
@@ -19,7 +19,7 @@
     <div class="main">
         <section class="banner">
             <header id="header" class="header">
-                <div class="logo-banner order-1"></div>
+                <a href="#"><div class="logo-banner order-1"></div></a>
                 <div class="hamburger-menu order-3 order-lg-2"></div>
                 <div class="search-bar-banner order-2 order-lg-3">
                     <input type="text" name="searchBar" id="searchBar" placeholder="search">
@@ -195,7 +195,7 @@
                                     <div class="like-box like" id="like"><img class="heart-1"
                                             src="./frontend/icons/heart.png" alt=""><img class="heart-2 d-none"
                                             src="./frontend/icons/heart-fill.png" alt=""></div>
-                                    <div class="inspect"><a href="#">İNCELE</a></div>
+                                    <div class="inspect"><a href="#" class="btn-style-blue">İNCELE</a></div>
                                     <div class="add-card">
                                         <div class="how-much"> <span id="minus" class="minus" >-</span> <span id="result">1</span> <span id="plus" class="plus" >+</span> </div>
                                         <div class="add-to-basket"><a href="#">SEPETE EKLE</a></div>
@@ -221,7 +221,7 @@
                                     <div class="like-box like" id="like"><img class="heart-1"
                                             src="./frontend/icons/heart.png" alt=""><img class="heart-2 d-none"
                                             src="./frontend/icons/heart-fill.png" alt=""></div>
-                                    <div class="inspect"><a href="#">İNCELE</a></div>
+                                    <div class="inspect"><a href="#" class="btn-style-blue">İNCELE</a></div>
                                     <div class="add-card">
                                         <div class="how-much"> <span id="minus" class="minus" >-</span> <span id="result">1</span> <span id="plus" class="plus" >+</span> </div>
                                         <div class="add-to-basket"><a href="#">SEPETE EKLE</a></div>
@@ -247,7 +247,7 @@
                                     <div class="like-box like" id="like"><img class="heart-1"
                                             src="./frontend/icons/heart.png" alt=""><img class="heart-2 d-none"
                                             src="./frontend/icons/heart-fill.png" alt=""></div>
-                                    <div class="inspect"><a href="#">İNCELE</a></div>
+                                    <div class="inspect"><a href="#" class="btn-style-blue">İNCELE</a></div>
                                     <div class="add-card">
                                         <div class="how-much"> <span id="minus" class="minus" >-</span> <span id="result">1</span> <span id="plus" class="plus" >+</span> </div>
                                         <div class="add-to-basket"><a href="#">SEPETE EKLE</a></div>
@@ -273,7 +273,7 @@
                                     <div class="like-box like" id="like"><img class="heart-1"
                                             src="./frontend/icons/heart.png" alt=""><img class="heart-2 d-none"
                                             src="./frontend/icons/heart-fill.png" alt=""></div>
-                                    <div class="inspect"><a href="#">İNCELE</a></div>
+                                    <div class="inspect"><a href="#" class="btn-style-blue">İNCELE</a></div>
                                     <div class="add-card">
                                         <div class="how-much"> <span id="minus" class="minus" >-</span> <span id="result">1</span> <span id="plus" class="plus" >+</span> </div>
                                         <div class="add-to-basket"><a href="#">SEPETE EKLE</a></div>
@@ -299,7 +299,7 @@
                                     <div class="like-box like" id="like"><img class="heart-1"
                                             src="./frontend/icons/heart.png" alt=""><img class="heart-2 d-none"
                                             src="./frontend/icons/heart-fill.png" alt=""></div>
-                                    <div class="inspect"><a href="#">İNCELE</a></div>
+                                    <div class="inspect"><a href="#" class="btn-style-blue">İNCELE</a></div>
                                     <div class="add-card">
                                         <div class="how-much"> <span id="minus" class="minus" >-</span> <span id="result">1</span> <span id="plus" class="plus" >+</span> </div>
                                         <div class="add-to-basket"><a href="#">SEPETE EKLE</a></div>
@@ -325,7 +325,7 @@
                                     <div class="like-box like" id="like"><img class="heart-1"
                                             src="./frontend/icons/heart.png" alt=""><img class="heart-2 d-none"
                                             src="./frontend/icons/heart-fill.png" alt=""></div>
-                                    <div class="inspect"><a href="#">İNCELE</a></div>
+                                    <div class="inspect"><a href="#" class="btn-style-blue">İNCELE</a></div>
                                     <div class="add-card">
                                         <div class="how-much"> <span id="minus" class="minus" >-</span> <span id="result">1</span> <span id="plus" class="plus" >+</span> </div>
                                         <div class="add-to-basket"><a href="#">SEPETE EKLE</a></div>
@@ -351,7 +351,7 @@
                                     <div class="like-box like" id="like"><img class="heart-1"
                                             src="./frontend/icons/heart.png" alt=""><img class="heart-2 d-none"
                                             src="./frontend/icons/heart-fill.png" alt=""></div>
-                                    <div class="inspect"><a href="#">İNCELE</a></div>
+                                    <div class="inspect"><a href="#" class="btn-style-blue">İNCELE</a></div>
                                     <div class="add-card">
                                         <div class="how-much"> <span id="minus" class="minus" >-</span> <span id="result">1</span> <span id="plus" class="plus" >+</span> </div>
                                         <div class="add-to-basket"><a href="#">SEPETE EKLE</a></div>
@@ -377,7 +377,7 @@
                                     <div class="like-box like" id="like"><img class="heart-1"
                                             src="./frontend/icons/heart.png" alt=""><img class="heart-2 d-none"
                                             src="./frontend/icons/heart-fill.png" alt=""></div>
-                                    <div class="inspect"><a href="#">İNCELE</a></div>
+                                    <div class="inspect"><a href="#" class="btn-style-blue">İNCELE</a></div>
                                     <div class="add-card">
                                         <div class="how-much"> <span id="minus" class="minus" >-</span> <span id="result">1</span> <span id="plus" class="plus" >+</span> </div>
                                         <div class="add-to-basket"><a href="#">SEPETE EKLE</a></div>
@@ -403,7 +403,7 @@
                                     <div class="like-box like" id="like"><img class="heart-1"
                                             src="./frontend/icons/heart.png" alt=""><img class="heart-2 d-none"
                                             src="./frontend/icons/heart-fill.png" alt=""></div>
-                                    <div class="inspect"><a href="#">İNCELE</a></div>
+                                    <div class="inspect"><a href="#" class="btn-style-blue">İNCELE</a></div>
                                     <div class="add-card">
                                         <div class="how-much"> <span id="minus" class="minus" >-</span> <span id="result">1</span> <span id="plus" class="plus" >+</span> </div>
                                         <div class="add-to-basket"><a href="#">SEPETE EKLE</a></div>
@@ -429,7 +429,7 @@
                                     <div class="like-box like" id="like"><img class="heart-1"
                                             src="./frontend/icons/heart.png" alt=""><img class="heart-2 d-none"
                                             src="./frontend/icons/heart-fill.png" alt=""></div>
-                                    <div class="inspect"><a href="#">İNCELE</a></div>
+                                    <div class="inspect"><a href="#" class="btn-style-blue">İNCELE</a></div>
                                     <div class="add-card">
                                         <div class="how-much"> <span id="minus" class="minus" >-</span> <span id="result">1</span> <span id="plus" class="plus" >+</span> </div>
                                         <div class="add-to-basket"><a href="#">SEPETE EKLE</a></div>
