--- a/bonapart-frontend/home.html
+++ b/bonapart-frontend/home.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="./frontend/css/animate-css.css">
     <link rel="stylesheet" href="./frontend/slick/slick-theme.css">
     <link rel="stylesheet" href="./frontend/slick/slick.css">
+    <link rel="stylesheet" href="./frontend/css/animation-plus.css">
 
 
 </head>
@@ -19,7 +20,7 @@
     <div class="main">
         <section class="banner">
             <header id="header" class="header">
-                <div class="logo-banner order-1"></div>
+                <a href="#"><div class="logo-banner order-1"></div></a>
                 <div class="hamburger-menu order-3 order-lg-2"></div>
                 <div class="search-bar-banner order-2 order-lg-3">
                     <input type="text" name="searchBar" id="searchBar" placeholder="search">
