--- a/bonapart-frontend/inspect-product.html
+++ b/bonapart-frontend/inspect-product.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="./frontend/css/animate-css.css">
     <link rel="stylesheet" href="./frontend/slick/slick-theme.css">
     <link rel="stylesheet" href="./frontend/slick/slick.css">
-
+    <link rel="stylesheet" href="./frontend/css/animation-plus.css">
 
 </head>
 
@@ -19,7 +19,7 @@
     <div class="main">
         <section class="banner">
             <header id="header" class="header">
-                <div class="logo-banner order-1"></div>
+                <a href="#"><div class="logo-banner order-1"></div></a>
                 <div class="hamburger-menu order-3 order-lg-2"></div>
                 <div class="search-bar-banner order-2 order-lg-3">
                     <input type="text" name="searchBar" id="searchBar" placeholder="search">
@@ -131,7 +131,7 @@
                                     
                                 </div>
                                 <div class="col-md-6 p-0 ">
-                                    <div class="box-item add-to-basket">
+                                    <div class="box-item add-to-basket ">
                                         <button id="add-to-basket">SEPETE EKLE</button>
                                     </div>
                                     
