--- a/atom-proje/aboutus.html
+++ b/atom-proje/aboutus.html
@@ -443,6 +443,7 @@
 
     <script src="https://kit.fontawesome.com/d274e337c4.js" crossorigin="anonymous"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
+    <script src="frontend/js/api.js"></script>
     <script src="frontend/js/script.js"></script>
     <script src="frontend/js/bootstrap.bundle.js"></script>
     <script src="frontend/js/wow.min.js"></script>
