--- a/atom-proje/contact-us.html
+++ b/atom-proje/contact-us.html
@@ -179,11 +179,11 @@
                             <div class="line"></div>
                             <a class="contact-mail wow fadeInDown" data-wow-delay="1000ms" href="mailto:destek@atomteknikservis.com">destek@atomteknikservis.com</a>
                             <div class="contact-links">
-                                <a href="#" class="click-popup">
+                                <a href="#" class="click-popup wow fadeInLeft" data-wow-delay="1200ms">
                                     <img class="me-3" src="./frontend/icons/run.png" alt="">
                                     SERVİS ÇAĞIR !
                                 </a>
-                                <a href="#">
+                                <a href="# " class="wow fadeInRight" data-wow-delay="1200ms">
                                     <img class="me-3" src="./frontend/icons/whatsapp.png" alt="">
                                     0 532 206 08 08
                                 </a>
@@ -214,7 +214,7 @@
             </div>
         </section>
 
-        <div class="fallow-us text-center wow fadeInUp" data-wow-delay="200ms">
+        <div class="fallow-us text-center wow fadeInDown" data-wow-delay="600ms">
             <a href="#" class="btn-style-6">
                 <i class="fa-brands fa-instagram me-2"></i>
                 BİZİ INSTAGRAMDAN TAKİP EDİN
