--- a/atom-proje/hizmetler-detay.html
+++ b/atom-proje/hizmetler-detay.html
@@ -161,7 +161,7 @@
         
         <section class="services-detail mt-5">
             <div class="container body-5">
-                <div class="item-img">
+                <div class="item-img shine-animation">
                     <img class="w-100" src="./frontend/images/servis-detay/1.png" alt="">
                 </div>
                  <div class="content">
@@ -197,18 +197,18 @@
                 <p class="text-center wow fadeInDown" data-wow-delay="250ms">İlgili markanın hızlı teknik servisi olarak hizmet vermekteyiz.<br />
                     Yapılan Tüm İşlemler Firmamız Tarafından 6 AY Atom Teknik Servis Güvencesi Altındadır.</p>
                 <div class="social">
-                    <div class="social-left click-popup">
+                    <div class="social-left click-popup wow fadeInLeft" data-wow-delay="500ms">
                         <img src="./frontend/icons/run2.png" alt="">
                         <div class="left-content">
                             <h5>SERVİS ÇAĞIR</h5>
                             <p>Formu Doldur! Arayalım</p>
                         </div>
                     </div>
-                    <div class="social-right">
+                    <div class="social-right wow fadeInRight" data-wow-delay="500ms">
                         <a href="">
                             <i class="fa-brands fa-whatsapp"></i>
                             <div class="left-content">
-                                <h5>SERVİS ÇAĞIR</h5>
+                                <h5>WhatsApp Hattı</h5>
                                 <p>Formu Doldur! Arayalım</p>
                             </div>
                         </a>
@@ -218,8 +218,8 @@
         </div>
 
         <section class="services my-5" id="services-section">
-            <div class="container body-5 mt-3">
-                <div class="row mt-5">
+            <div class="container body-5 ">
+                <div class="row ">
                     <div class="col-md-6 col-lg-8 mb-4 mb-md-0">
                         <div class="services-slider ">
                             <div class="item">
@@ -279,6 +279,18 @@
                                 <span>TÜM HİZMETLERİMİZ</span></i>
                             </a>
                         </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section class="guarantee ">
+            <div class="container body-5">
+                <div class="row">
+                    <div class="guarantee-section d-flex flex-column align-items-center bg-1">
+                        <figcaption class="mb-3 wow fadeInDown" data-wow-delay="200ms"><img src="./frontend/images/6-ay.png" alt=""></figcaption>
+                        <p class="text-center wow fadeInDown" data-wow-delay="500ms">Vermiş olduğumuz hizmet ve onlarımlar<br class="d-none d-md-block" />
+                            <span>6 Ay servis garantilidir.</span></p>
                     </div>
                 </div>
             </div>
