--- a/atom-proje/homepage-2.html
+++ b/atom-proje/homepage-2.html
@@ -87,12 +87,12 @@
                     <div class="slide-item relative">
                         <div class="row w-100 g-0">
                             <div class="content my-auto col-12 col-lg-6 order-2 order-lg-1 ">
-                                <h1 class="wow fadeInDown" data-wow-delay="200ms">Televizyon <br />
+                                <h1>Televizyon <br />
                                     Onarım ve Bakımı</h1>
 
-                                <p class="wow fadeInDown" data-wow-delay="400ms">Televizyon onarım ve bakımında Tecrübeli<br />
+                                <p>Televizyon onarım ve bakımında Tecrübeli<br />
                                     servis çalışanları ile üstün hizmet</p>
-                                <a href="#" class="btn-style-1 wow fadeInDown" data-wow-delay="600ms">
+                                <a href="#" class="btn-style-1">
                                     <span>NASIL YAPIYORUZ ?</span></i>
                                 </a>
                             </div>
@@ -257,7 +257,7 @@
         <section class="services" id="services-section">
             <div class="container body-5 mt-3">
                 <div class="row mt-5">
-                    <div class="col-md-6 col-lg-8 mb-4 mb-md-0 wow fadeInLeft" data-wow-delay="200ms">
+                    <div class="col-md-6 col-lg-8 mb-4 mb-md-0">
                         <div class="services-slider ">
                             <div class="item">
                                 <div class="item-img">
@@ -268,23 +268,22 @@
                                     </div>
                                 </div>
                                 <div class="item-title">
-                                    <h5>Klima <br />
-                                        Onarımı ve
+                                    <h5>Klima Onarımı ve<br />
                                         Bakımı</h5>
                                     <a class="btn-style-2" href="#">Detaylı Oku »</a>
                                 </div>
                             </div>
                             <div class="item">
                                 <div class="item-img">
-                                    <img src="./frontend/images/camasir.png" alt="...">
+                                    <img src="./frontend/images/klima-onarim.png" alt="...">
                                     <div class="visible-content">
-                                        Çamaşır Makinası <br /> Onarım Ve Bakımı
+                                        Klima <br /> Onarım Ve Bakımı
                                         <a class="btn-style-2" href="#">Detaylı Oku »</a>
                                     </div>
                                 </div>
                                 <div class="item-title">
-                                    <h5>Çamaşır Makinası<br />
-                                        Onarım Ve Bakımı</h5>
+                                    <h5>Klima Onarımı ve<br />
+                                        Bakımı</h5>
                                     <a class="btn-style-2" href="#">Detaylı Oku »</a>
                                 </div>
                             </div>
@@ -304,16 +303,16 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-6 col-lg-4 my-auto " >
+                    <div class="col-md-6 col-lg-4 my-auto">
                         <div class="services-content ">
-                            <h3 class="wow fadeInDown" data-wow-delay="200ms">HİZMETLERİMİZ</h3>
+                            <h3>HİZMETLERİMİZ</h3>
 
-                            <p class="wow fadeInDown" data-wow-delay="400ms">İstanbul genelinde, tüm Beyaz Eşyalarınız için Teknik servis hizmeti veriyoruz. Teknik
+                            <p>İstanbul genelinde, tüm Beyaz Eşyalarınız için Teknik servis hizmeti veriyoruz. Teknik
                                 servis firması olarak uzun yılların verdiği tecrübe ile Vermekte olduğumuz hizmetleri
                                 her daim en iyi olabilmek adına kendimizi geliştirmekte ve firma olarak kendimize farklı
                                 konular içerisinde de yenilikler katmaktayız.</p>
 
-                            <a href="#" class="btn-style-3 wow fadeInUp" data-wow-delay="600ms">
+                            <a href="#" class="btn-style-3">
                                 <span>TÜM HİZMETLERİMİZ</span></i>
                             </a>
                         </div>
@@ -327,21 +326,21 @@
                 <div class="row ">
                     <div class="col-md-6 col-lg-4 order-2 order-lg-1">
                         <div class="services-content ">
-                            <h3 class="wow fadeInDown" data-wow-delay="250ms">Biz Kimiz?</h3>
+                            <h3>Biz Kimiz?</h3>
 
-                            <p class="wow fadeInDown" data-wow-delay="500ms">Uzun Yıllardan Beri Beyaz Eşya Sektöründeki Teknik Servis Tecrübemiz Ile ; Televizyondan
+                            <p>Uzun Yıllardan Beri Beyaz Eşya Sektöründeki Teknik Servis Tecrübemiz Ile ; Televizyondan
                                 Çamaşır Makinesine, Kombiden Buzdolabına, Klimadan Küçük Elektrikli Ev Aletlerine Kadar
                                 Her Türlü Beyaz Eşyalarınız Tamiri Ve Bakımında Size Kaliteli Hizmet Anlayışı Ile
                                 Destekçiniz Olmaya Hazırız.</p>
 
-                            <a href="#" class="btn-style-3 wow fadeInUp" data-wow-delay="750ms">
+                            <a href="#" class="btn-style-3">
                                 <span>TÜM HİZMETLERİMİZ</span></i>
                             </a>
                         </div>
                     </div>
                     <div class="col-md-6 col-lg-8 mt-5 mb-5 order-1 order-lg-2">
                         <div class="counter-numbers">
-                            <div class="row ">
+                            <div class="row gx-5">
                                 <div class="col-6 col-lg-3  item">
                                     <div class="value" akhi="782">0</div>
                                     <span>Ürün Tamiri</span>
@@ -557,8 +556,8 @@
                                 </div>
                                 <div class="col-12">
                                     <div class="approve">
-                                        <input type="checkbox" name="" id="ididHome">
-                                        <label for="ididHome"></label>
+                                        <input type="checkbox" name="" id="idid">
+                                        <label for="idid"></label>
                                         <p><a href="#"  target="_blank">Aydınlatma Metni</a>’ni okudum ve onaylıyorum.</p>
                                     </div>
                                 </div>
