--- a/atom-proje/endustriyel-detay.html
+++ b/atom-proje/endustriyel-detay.html
@@ -26,9 +26,11 @@
             <div class="container-fluid p-0 ">
                 <header>
                     <div class="banner-logo ">
+                       <a href="#">
                         <figure>
                             <img src="./frontend/images/atom-logo.png" alt="...">
                         </figure>
+                       </a>
                     </div>
                     <nav>
                         <ul>
