--- a/atom-proje/hizmet-verdigimiz-urun-gruplari.html
+++ b/atom-proje/hizmet-verdigimiz-urun-gruplari.html
@@ -26,9 +26,11 @@
             <div class="container-fluid p-0 ">
                 <header>
                     <div class="banner-logo ">
-                        <figure>
-                            <img src="./frontend/images/atom-logo.png" alt="...">
-                        </figure>
+                        <a href="#">
+                            <figure>
+                                <img src="./frontend/images/atom-logo.png" alt="...">
+                            </figure>
+                        </a>
                     </div>
                     <nav>
                         <ul>
@@ -151,7 +153,7 @@
                 <div class="row">
                     <div class="col-12">
                         <div class="breadcrumb">
-                            <span id="parent-page">anasayfa</span> > <span id="child-page">hizmetlerimiz</span> > <span id=""></span>
+                            <span id="parent-page">anasayfa</span> > <span id="child-page">hizmetlerimiz</span> > <span id="">endüstriyel mutfak ekipmanları</span>
                         </div>
                     </div>
                 </div>
