--- a/atom-proje/contact-us.html
+++ b/atom-proje/contact-us.html
@@ -26,9 +26,11 @@
             <div class="container-fluid p-0">
                 <header>
                     <div class="banner-logo ">
-                        <figure>
-                            <img src="./frontend/images/atom-logo.png" alt="...">
-                        </figure>
+                        <a href="#">
+                            <figure>
+                                <img src="./frontend/images/atom-logo.png" alt="...">
+                            </figure>
+                        </a>
                     </div>
                     <nav>
                         <ul>
